api/ci/kube/api.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - image: eu.gcr.io/{project-id}/api:1.0.0
          name: api
          ports:
            - containerPort: 8080
              name: api

          livenessProbe:
            httpGet:
              path: /api/ping
              port: api
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/ping
              port: api
            initialDelaySeconds: 30
            periodSeconds: 30
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: api
