api/ci/kube/db.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - image: mongo:3
          name: db
          ports:
            - containerPort: 27017
              name: db
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /data/db
          imagePullPolicy: Always
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: volumeclaim-db
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  type: ClusterIP
  ports:
    - port: 27017
  selector:
    app: db
